--- a/_includes/lecture_links.html
+++ b/_includes/lecture_links.html
@@ -1,7 +1,7 @@
 
     {% if include.lecture.links %}
     {% for link in include.lecture.links %}
-    [<a title="View {{ link.name }}" href="
+    [<a title="Download {{ link.name }}" href="
     {% if link.url contains '://' %}
       {{ link.url }} 
     {% else %}
