--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -5,7 +5,6 @@
     border-top: 0px solid $grey-color-dark;
 	border-bottom: 6px solid $clemson-orange;
     min-height: 56px;
-    // background-color: $clemson-purple;
     background-color: $clemson-purple;
     // Positioning context for the mobile navigation icon
     position: relative;
@@ -93,21 +92,17 @@ color: $title-color;
 
 .site-nav .sub-menu a:hover {
 	color: $clemson-purple;
-    // color: yellow;
 }
 .site-nav  .sub-menu {
 	background: #ffffff;
 	border-color: $clemson-purple;
-    // border-color: red;
 	min-width: 265px;
 
 	z-index:2147483647;
 }
 .site-nav .sub-menu li.current-menu-item > a {
 	border-left-color: $clemson-purple;
-    // border-left-color: green;
 	border-right-color: $clemson-purple;
-    // border-right-color: green;
 	border-right: 0px;
 
 }
@@ -166,9 +161,7 @@ z-index:999;
 
     .page-link {
         color: $header-text-color;
-        // background: $clemson-purple;
-        // menu icon color
-        background: transparent;
+    background: $clemson-purple;
         line-height: $base-line-height;
 
         // Gaps between nav items, but not on the first one
@@ -184,7 +177,6 @@ z-index:999;
         top: 9px;
         right: 30px;
         background-color: $background-color;
-        // background-color: orange;
         border: 1px solid $grey-color-light;
         border-radius: 5px;
         text-align: right;
@@ -197,7 +189,6 @@ z-index:999;
             line-height: 0;
             padding-top: 10px;
             text-align: center;
-            // background-color: transparent;
 
             > svg {
                 width: 18px;
