--- a/_sass/_user_vars.scss
+++ b/_sass/_user_vars.scss
@@ -1,10 +1,9 @@
 // theme #1
-$primary-color:  #660874;
-// $accent-color: #f66733;
-$accent-color: #d93379;
+$primary-color:  #0077CC;
+$accent-color: #f66733;
 $title-color: #522d80;
 $header-text-color: #fff;
-$header-color: #660874;
+$header-color: #336699;
 $header-background-opacity: 0.5;
 
 // // theme #2
