--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -11,7 +11,7 @@
 }
 
 .header-texture {
-    opacity: $header-background-opacity;
+    // opacity: $header-background-opacity;
     filter: invert($header-background-invert);
 }
 
@@ -161,7 +161,7 @@ z-index:999;
 
     .page-link {
         color: $header-text-color;
-    background: $clemson-purple;
+    // background: $clemson-purple;
         line-height: $base-line-height;
 
         // Gaps between nav items, but not on the first one
